--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
-header-img: "img/about-bg.jpg"
+description: "Hey, this is Chengz."
+header-img: ""
 ---
 
 啥都没有了~
